<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.albertoalegria.mdreminderv001.activities.CreateMed">

        <TextView
            android:id="@+id/tvMedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/med_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etMedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/med_name"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/tvMedName"
            app:layout_constraintTop_toBottomOf="@+id/tvMedName" />

        <TextView
            android:id="@+id/tvMedType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/med_type"
            app:layout_constraintLeft_toLeftOf="@+id/etMedName"
            app:layout_constraintTop_toBottomOf="@+id/etMedName" />

        <Spinner
            android:id="@+id/spMedType"
            android:layout_width="368dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/tvMedType"
            app:layout_constraintTop_toBottomOf="@+id/tvMedType" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            app:layout_constraintLeft_toLeftOf="@+id/spMedType"
            app:layout_constraintTop_toBottomOf="@+id/spMedType" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="@+id/tvQuantity"
            app:layout_constraintTop_toBottomOf="@+id/tvQuantity" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/pill"
            app:layout_constraintBottom_toBottomOf="@+id/etQuantity"
            app:layout_constraintLeft_toRightOf="@+id/etQuantity" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/time"
            app:layout_constraintLeft_toLeftOf="@+id/etQuantity"
            app:layout_constraintTop_toBottomOf="@+id/etQuantity" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="@+id/tvTime"
            app:layout_constraintTop_toBottomOf="@+id/tvTime"
            android:focusable="false" />

        <TextView
            android:id="@+id/tvRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repeat"
            app:layout_constraintLeft_toLeftOf="@+id/etTime"
            app:layout_constraintTop_toBottomOf="@+id/etTime"
            tools:text="@string/repeat" />

        <Spinner
            android:id="@+id/spRepeat"
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/tvRepeat"
            app:layout_constraintTop_toBottomOf="@+id/tvRepeat" />

        <ImageView
            android:id="@+id/ivMedType"
            android:layout_width="101dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image_name"
            app:srcCompat="@drawable/ic_pill"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvImage"
            android:clickable="true"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/image_name"
            app:layout_constraintLeft_toLeftOf="@+id/spRepeat"
            app:layout_constraintTop_toBottomOf="@+id/spRepeat"
            tools:text="@string/image_name" />

        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSave"
            app:layout_constraintLeft_toLeftOf="@+id/tvImage"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivMedType"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancel"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivMedType"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintRight_toRightOf="@+id/spRepeat" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>