<resources>

    <!--Strings-->

    <string name="app_name">M.D. Reminder v0.01</string>
    <string name="med_name">Med name</string>
    <string name="med_type">Med type</string>
    <string name="quantity">Quantity</string>
    <string name="pills">Pill(s)</string>
    <string name="milliliters">Milliliters</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat each</string>
    <string name="title_activity_med_list">MedList</string>
    <string name="pill">Pill</string>
    <string name="syrup">Syrup</string>
    <string name="injection">Injection</string>
    <string name="image_name">You can take a picture of your med</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error">This field is necessary</string>
    <string name="notif_body">It\'s time for your</string>
    <string name="hours">Hour(s)</string>

    <!--Arrays-->

    <string-array name="types">
        <item>@string/pill</item>
        <item>@string/syrup</item>
        <item>@string/injection</item>
    </string-array>

    <string-array name="hours">
        <item>1 hr</item>
        <item>2 hrs</item>
        <item>3 hrs</item>
        <item>4 hrs</item>
        <item>6 hrs</item>
        <item>8 hrs</item>
        <item>12 hrs</item>
        <item>24 hrs</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_med_type">Image according to the med type</string>
    <string name="description_med_image">Image of the med</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
